92) kernel: net: netfilter: ctnetlink: reject new conntrack request with different l4proto.<br>
93) kernel: net: netfilter: gre: Use consistent GRE_* macros instead of ones defined by netfilter.<br>
94) kernel: net: netfilter: gre: Use consistent GRE and PTTP header structure instead of the ones defined by netfilter.<br>
95) kernel: net: netfilter: ftp: Remove the useless dlen==0 condition check in find_pattern.<br>
96) kernel: net: netfilter: ftp: Remove the useless code.<br>
97) kernel: net: netfilter: nf_ct_sip: correct parsing of continuation lines in SIP headers.<br>
98) kernel: net: netfilter: nf_ct_sip: correct allowed characters in Call-ID SIP header.<br>
99) kernel: net: netfilter: nf_ct_sip: allow tab character in SIP headers.<br>
<br>
<br>
<b>4.7.x</b><br>
1) configs: mt7621: enable highmem support, work and tests ok now.<br>
2) coovachilli: up to 1.3.1.4 from git (commit 9749d5eb).<br>
3) openssl: update to 1.0.1u.<br>
4) goahead: implement vlan page and switch status refactoring.<br>
6) kernel: ralink_spi: use last stub item if flash chip not recognized.<br>
7) kernel: ralink_wifi: mt7620: add very simple support of RRM (only TPC/Regulatore/APChannel reports).<br>
8) kernel: ralink_wifi: mt76x2: fix reset idle timeout and retransmits counter on broadcast/multicast activity.<br>
9) kernel: ktime: add __must_check prefix to ktime_to_timespec_cond.<br>
10) kernel: usb: serial: option: add WeTelecom WM-D200.<br>
11) kernel: usb: serial: option: add WeTelecom 0x6802 and 0x6803 products.<br>
12) kernel: mips: barrier: add definitions of SYNC stype values.<br>
13) kernel: mips: c-r4k: fix size calc when avoiding IPIs for small icache flushes.<br>
14) kernel: mips: asm-offset.c: delete unused irq_cpustat_t struct offsets.<br>
15) kernel: net: packet: minor: add generic tpacket_uhdr to access packet headers.<br>
16) kernel: net: packet: tx timestamping on tpacket ring.<br>
17) kernel: net: socket: move ktime2ts to ktime header api.<br>
<br>
<br>
<br>